@@ -1,3 +1,9 @@
+2008-05-12  Stefan Kost  <ensonic@users.sf.net>
+
+	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
+	* src/BuzzMachineLoader/dsplib.h:
+	  Crosscompilation fixes.
+
 2008-05-11  Stefan Kost  <ensonic@users.sf.net>
 
 	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
